src/objects/Insurance_Verification__c.object
<CustomObject>
    <fields>
        <fullName>OOP__c</fullName>
        <label>OON OOP</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Obtain_proof_of_COBRA_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obtain proof of COBRA payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obtain_proof_of_premium_payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obtain proof of premium payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Insurance_Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outpatient_Coinsurance__c</fullName>
        <label>OON Outpatient Coinsurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PHP_Benefits__c</fullName>
        <label>PHP Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PHP_Copay__c</fullName>
        <label>PHP Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHP_Days_Auth_d__c</fullName>
        <description>PHP days authed on last admission</description>
        <label>PHP Days Auth&apos;d</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Address_City__c</fullName>
        <formula>Opportunity__r.Patient_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Address_City_new__c</fullName>
        <label>Patient Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Address_State__c</fullName>
        <formula>TEXT( Opportunity__r.Patient_State_new__c )</formula>
        <label>Patient Address State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Address_State_new__c</fullName>
        <label>Patient Address State</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Address_Street__c</fullName>
        <formula>Opportunity__r.Patient_Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Address_Street_new__c</fullName>
        <label>Patient Address Street</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <formula>Opportunity__r.Patient_Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Age_new__c</fullName>
        <label>Patient Age</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <formula>Opportunity__r.DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_DOB_new__c</fullName>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Gender__c</fullName>
        <formula>TEXT( Opportunity__r.Gender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Gender_new__c</fullName>
        <label>Patient Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <formula>Opportunity__r.Patient_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone_new__c</fullName>
        <label>Patient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Patient_SSN__c</fullName>
        <formula>Opportunity__r.Patient_SSN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_SSN_new__c</fullName>
        <label>Patient SSN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Zip__c</fullName>
        <formula>Opportunity__r.Patient_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Zip_new__c</fullName>
        <label>Patient Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Insurance_Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_to_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay to Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payer_ID2__c</fullName>
        <formula>Payer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_ID__c</fullName>
        <label>Payer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_for_no_precert__c</fullName>
        <label>Penalty for no precert?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Group_Number__c</fullName>
        <formula>Opportunity__r.Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Group_Number_new__c</fullName>
        <label>Policy Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>POS2</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Choice Plus</fullName>
                </value>
                <value>
                    <fullName>Open Access</fullName>
                </value>
                <value>
                    <fullName>Open Access Plus</fullName>
                </value>
                <value>
                    <fullName>Indemnity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_effective_Date__c</fullName>
        <label>Policy effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preadmit_EIV_Labs__c</fullName>
        <formula>EIV__c +  Avg_Lab_Reimbursement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preadmit EIV + Labs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precert_Company__c</fullName>
        <label>Precert Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precert_Phone_Number__c</fullName>
        <label>Precert Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <formula>IF (or( contains(  Primary_Insurance_Company__c , &quot;BC&quot;), contains (  Primary_Insurance_Company__c , &quot;BCBS&quot;) , contains (  Primary_Insurance_Company__c , &quot;bcbs&quot;) , contains (  Primary_Insurance_Company__c  , &quot;Blue&quot;),contains (  Primary_Insurance_Company__c , &quot;blue&quot;),contains (  Primary_Insurance_Company__c , &quot;Anthem&quot;),contains (  Primary_Insurance_Company__c , &quot;ANTHEM&quot;),contains (  Primary_Insurance_Company__c , &quot;bc&quot;) ,contains (  Primary_Insurance_Company__c , &quot;Empire&quot;) ,contains (  Primary_Insurance_Company__c , &quot;EMPIRE&quot;) ,contains (  Primary_Insurance_Company__c , &quot;Independence&quot;) ,contains (  Primary_Insurance_Company__c , &quot;INDEPENDENCE&quot;) ,contains (  Primary_Insurance_Company__c , &quot;Carefirst&quot;),contains(  Primary_Insurance_Company__c , &quot;Horizon&quot;),contains(  Primary_Insurance_Company__c , &quot;HORIZON&quot;),contains(  Primary_Insurance_Company__c , &quot;Keystone&quot;),contains(  Primary_Insurance_Company__c , &quot;KEYSTONE&quot;),contains(Primary_Insurance_Company__c , &quot;Highmark&quot;),contains (Primary_Insurance_Company__c , &quot;Premera&quot;), contains( Primary_Insurance_Company__c, &quot;CAREFIRST&quot;), contains( Primary_Insurance_Company__c , &quot;HIGHMARK&quot;), contains ( Primary_Insurance_Company__c , &quot;PREMERA&quot;), contains( Primary_Insurance_Company__c, &quot;REGENCE&quot;), contains( Primary_Insurance_Company__c, &quot;Regence&quot;), contains ( Primary_Insurance_Company__c, &quot;WELLMARK&quot;), contains ( Primary_Insurance_Company__c, &quot;Wellmark&quot;), contains ( Primary_Insurance_Company__c, &quot;BS of California&quot;)),  LEFT( Member_ID__c  ,3),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Insurance_Company__c</fullName>
        <formula>Opportunity__r.Insurance_Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Insurance Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Insurance_Phone__c</fullName>
        <formula>Opportunity__r.Insurance_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Insurance Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RES_Benefits__c</fullName>
        <label>RES Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RX_Phone__c</fullName>
        <label>RX Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Raty_Type__c</fullName>
        <label>Reimbursement Rate Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Subscriber__c</fullName>
        <formula>Patient__r.Subscriber_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship to Subscriber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Subscriber_new__c</fullName>
        <label>Relationship to Subscriber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Copay__c</fullName>
        <label>Res Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Days_Auth_d__c</fullName>
        <description>Residential days authorized on last admission</description>
        <inlineHelpText>pulled from most recent admission</inlineHelpText>
        <label>Res Days Auth&apos;d</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Company__c</fullName>
        <label>Rx Company</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Famile_Det_MET__c</fullName>
        <label>Secondary Family Det MET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Family_Ded__c</fullName>
        <label>Secondary Family Ded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Family_OOP_Met__c</fullName>
        <label>Secondary Family OOP Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Family_OOP__c</fullName>
        <label>Secondary Family OOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Group_No__c</fullName>
        <formula>Opportunity__r.Secondary_Ins_Group_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins Group No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Member_ID__c</fullName>
        <formula>Opportunity__r.Secondary_Ins_Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Sub_DOB__c</fullName>
        <formula>Patient__r.Secondary_Ins_Sub_DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins Sub DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber__c</fullName>
        <formula>Patient__r.Secondary_Ins_Subscriber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins Subscriber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_relationship_to_sub__c</fullName>
        <formula>Patient__r.Secondary_Ins_Subscriber_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins relationship to sub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Company__c</fullName>
        <formula>Patient__r.Secondary_Insurance_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Insurance Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_INN_Ded_MET__c</fullName>
        <label>Secondary Insurance INN Ded MET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_INN_Ded__c</fullName>
        <label>Secondary Insurance INN Ded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_INN_OOP_MET__c</fullName>
        <label>Secondary Insurance INN OOP MET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_INN_OOP__c</fullName>
        <label>Secondary Insurance INN OOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_OON_Ded_MET__c</fullName>
        <label>Secondary Insurance OON Ded MET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_OON_Ded__c</fullName>
        <label>Secondary Insurance OON Ded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_OON_OOP_MET__c</fullName>
        <label>Secondary Insurance OON OOP MET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_OON_OOP__c</fullName>
        <label>Secondary Insurance OON OOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscriber_Address__c</fullName>
        <formula>Patient__r.Subscriber_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Address_new__c</fullName>
        <label>Subscriber Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_DOB__c</fullName>
        <formula>Patient__r.Subscriber_DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_DOB_new__c</fullName>
        <label>Subscriber DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_E_mail__c</fullName>
        <formula>Patient__r.Subscriber_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber E-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Email_new__c</fullName>
        <label>Subscriber Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subscriber_Employer__c</fullName>
        <formula>Patient__r.Subscriber_Employer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Employer_new__c</fullName>
        <label>Subscriber Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Gender__c</fullName>
        <formula>text ( Patient__r.Subscriber_Gender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Gender_new__c</fullName>
        <label>Subscriber Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <formula>Opportunity__r.Subscriber_First_Name__c + &apos; &apos; + Opportunity__r.Subscriber_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name_new__c</fullName>
        <label>Subscriber Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Phone__c</fullName>
        <formula>Patient__r.Subscriber_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Phone_new__c</fullName>
        <label>Subscriber Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Term_Date_if_any__c</fullName>
        <label>Term Date if any</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Party_Neg_Notes__c</fullName>
        <label>Third Party Neg. Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Negotiation__c</fullName>
        <label>Third Party Negotiation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiplan</fullName>
                </value>
                <value>
                    <fullName>Viant</fullName>
                </value>
                <value>
                    <fullName>GCS</fullName>
                </value>
                <value>
                    <fullName>NAP (Aetna)</fullName>
                </value>
                <value>
                    <fullName>Zelis</fullName>
                </value>
                <value>
                    <fullName>Data ISight</fullName>
                </value>
                <value>
                    <fullName>Other - please note.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Est_Charges__c</fullName>
        <formula>( Est_Detox_Days__c * Est_Detox_Rate__c )+( Est_Res_Days__c * Est_Res_Rate__c )+( Est_PHP_Rate__c * Est_PHP_Days__c )+( Est_IOP_Days__c * Est_IOP_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Est Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_LOS__c</fullName>
        <description>Total Length of stay across all admissions</description>
        <inlineHelpText>added up for all admissions</inlineHelpText>
        <label>Total LOS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VOB_Completed__c</fullName>
        <description>When the VOB was completed.</description>
        <label>VOB Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VOB_Initiated__c</fullName>
        <description>When the VOB was started.</description>
        <label>VOB Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Verification_Type__c</fullName>
        <defaultValue>&quot;Primary&quot;</defaultValue>
        <label>Verification Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>Primary</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Secondary</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified_by__c</fullName>
        <formula>Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verified by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verifier__c</fullName>
        <label>Insurance Verified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_levels_require_precert__c</fullName>
        <label>What levels require precert?</label>
        <type>TextArea</type>
    </fields>
    <label>Insurance Verification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Primary_Insurance_Company__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Deductible_Remaining__c</columns>
        <columns>Inpatient_Co_insurance__c</columns>
        <columns>OOP_Remaining__c</columns>
        <columns>Is_Subacute_Detox_Covered__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Primary Insurance Verification</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Verifications</pluralLabel>
    <recordTypes>
        <fullName>Online_Verification</fullName>
        <active>true</active>
        <label>Full VOB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Online_Verifications</fullName>
        <active>true</active>
        <label>Online Verification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quick_VOB</fullName>
        <active>true</active>
        <label>Approval Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>